Feat/updated items support (#9)
* Added support to create new item on the ground. Implemented items refactory

* Names refactored to make more cohesive

* Refresh ground items on move

* Draw items when moving

* Added support to items search and indexation

* Created unit testing for item locator

* Updated draw items on mobile movement

* Added support to eventHandler

* Created SessionRequired Managers

* Fixed commandManager tests

* Created tests for DoubleClick